fix: Apply "text-align" on body instead of .text div elements

--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -1,5 +1,6 @@
 body {
   font-family: 'Courier New', Courier, monospace;
+  text-align: center;
 }
 
 img {
@@ -13,10 +14,6 @@ img {
   display: flex;
   justify-content: center;
   margin-bottom: 32px;
-}
-
-.text {
-  text-align: center;
 }
 
 .plants {
